# claude-starter-pack

./: README.md
agents/: launch-project.md
google-docs-cli/: .gitignore  README.md  pyproject.toml
google-docs-cli/src/gdocs_cli/: __init__.py  api.py  auth.py  cli.py  config.py  formatters.py  markdown.py
skills/google-docs/: SKILL.md
skills/skill-creator/: SKILL.md
